--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -82,11 +82,11 @@ date: 2019-04-30 14:14:50
 
 **播放器架构**：
 
-<img src="images/imageFFmpeg/播放器架构.png">
+<img src="/images/imageFFmpeg/播放器架构.png">
 
 **渲染流程**：
 
-<img src="images/imageFFmpeg/渲染流程.png">
+<img src="/images/imageFFmpeg/渲染流程.png">
 
 **FFmpeg 都能做啥**：
 
@@ -117,19 +117,19 @@ $ make && make install
 
 除了 FFMPEG 的基本信息查询命令外，其它命令都按下图所示的流程处理音视频。
 
-<img src="images/imageFFmpeg/FFmpeg处理音视频流程.png">
+<img src="/images/imageFFmpeg/FFmpeg处理音视频流程.png">
 
-<img src="images/imageFFmpeg/FFmpeg基本信息查询命令.png">
+<img src="/images/imageFFmpeg/FFmpeg基本信息查询命令.png">
 
-<img src="images/imageFFmpeg/FFmpeg录屏命令.png">
+<img src="/images/imageFFmpeg/FFmpeg录屏命令.png">
 
 ```shell
 $ ffplay -s 2560x1600 -pix_fmt uyvy422 out.yuv
 ```
 
-<img src="images/imageFFmpeg/分解与复用-01.png">
+<img src="/images/imageFFmpeg/分解与复用-01.png">
 
-<img src="images/imageFFmpeg/多媒体格式转换.png">
+<img src="/images/imageFFmpeg/多媒体格式转换.png">
 
 ## 3. 初级开发内容
 
@@ -609,7 +609,7 @@ SDL_WaitEventTimeout();
 
 SDL 渲染基本原理：
 
-<img src="images/imageFFmpeg/SDL渲染基本原理.png">
+<img src="/images/imageFFmpeg/SDL渲染基本原理.png">
 
 SDL 文理相关 API：
 
@@ -652,7 +652,7 @@ SDL_UpdateYUVTexture();
 
 播放音频基本流程：
 
-<img src="images/imageFFmpeg/播放音频基本流程.png">
+<img src="/images/imageFFmpeg/播放音频基本流程.png">
 
 播放音频的基本原则：
 
@@ -740,7 +740,7 @@ TODO
 
 ### 6.3 播放器线程模型
 
-<img src="images/imageFFmpeg/播放器线程模型.png">
+<img src="/images/imageFFmpeg/播放器线程模型.png">
 
 ### 6.4 线程的退出机制
 
@@ -803,7 +803,7 @@ TODO
 
 Android 架构：
 
-<img src="images/imageFFmpeg/Android架构.png">
+<img src="/images/imageFFmpeg/Android架构.png">
 
 内容：
 
@@ -831,9 +831,9 @@ Java调用C/C++ 方法一：
 
 Java调用C/C++方法二：
 
-<img src="images/imageFFmpeg/java调用c方法二.png">
+<img src="/images/imageFFmpeg/java调用c方法二.png">
 
-<img src="images/imageFFmpeg/注册Native方法的最佳时机.png">
+<img src="/images/imageFFmpeg/注册Native方法的最佳时机.png">
 
 什么是Signature：
 
@@ -841,11 +841,11 @@ Java调用C/C++方法二：
 - 输入参数放在（）内，输出参数放在（）外
 - 多个参数之间顺序存放，且用 “；” 分割
 
-<img src="images/imageFFmpeg/原始类型的Signature.png">
+<img src="/images/imageFFmpeg/原始类型的Signature.png">
 
-<img src="images/imageFFmpeg/类的Signature.png">
+<img src="/images/imageFFmpeg/类的Signature.png">
 
- <img src="images/imageFFmpeg/例子.png">
+ <img src="/images/imageFFmpeg/例子.png">
 
 C/C++ 调用 Java 方法：
 
