add details for potos

--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -94,13 +94,17 @@ date: 2019-04-30 14:14:50
 - FFmpeg 可以运行在 Linux、Mac、Windows 等平台上
 - 能够解码、编码、转码、复用、解复用、过滤音视频数据
 
-**FFmpeg 下载便于与安装**：
+**FFmpeg 下载与安装**：
+
+<details><summary>FFMpeg 下载与安装</summary> 
 
 ```shell
 $ git clone https://git.ffmpeg.org/ffmpeg.git
 $ config -- help
 $ make && make install
 ```
+
+</details>
 
 ## 2. FFmpeg 常用命令实战
 
@@ -161,6 +165,8 @@ av_log(NULL, AV_LOG_INFO, "...%s\n", op)
 - AV_LOG_WARNING
 - AV_LOG_INFO
 
+<details><summary>FFmpeg日志系统使用</summary>
+
 ```c
 #include <stdio.h>
 #include <libavutil/log.h>
@@ -175,6 +181,8 @@ int main(int argc, char *argv[])
 }
 ```
 
+</details>
+
 ### 3.2 FFmpeg 文件与目录操作
 
 文件的删除与重命名：
@@ -186,6 +194,8 @@ avpriv_io_delete()
     
 avpriv_io_move(src, dst)
 ```
+
+<details><summary>FFmpeg文件与目录操作</summary>
 
 ```c
 #include <stdio.h>
@@ -220,10 +230,11 @@ $ pkg-config --libs libavformat
 -L/usr/local/ffmpeg/lib -lavformat
 ```
 
+</details>
+
 ### 3.3 FFmpeg 操作目录重要函数
 
 ```c
-# 
 avio_open_dir()
 avio_read_dir()
 avio_close_dir()
@@ -238,6 +249,8 @@ avio_close_dir()
 - AVIODirEntry
 
   目录项。用于存放文件名，文件大小等信息
+
+<details><summary>FFmpeg操作目录</summary>
 
 ```c
 #include <stdio.h>
@@ -283,6 +296,8 @@ __fail:
 $ clang -g -o list ffmpeg_list.c `pkg-config --libs libavformat libavutil`
 ```
 
+</details>
+
 ### 3.4 多媒体文件的基本概念
 
 - 多媒体文件其实是个容器
@@ -309,11 +324,12 @@ avformat_open_input() / avformat_close_input()
 av_dump_format()
 ```
 
+<details><summary>[实战] 打印音/视频信息</summary>
+
 ```c
 #include <stdio.h>
 #include <libavutil/log.h>
 #include <libavformat/avformat.h>
-
 
 int main(int argc, char *argv[])
 {
@@ -338,6 +354,8 @@ int main(int argc, char *argv[])
 }
 ```
 
+</details>
+
 ### 3.6 [实战] 抽取音频数据
 
 ```c
@@ -345,6 +363,8 @@ av_init_packet()
 av_find_best_stream()
 av_read_frame() / av_packet_unref()
 ```
+
+<details><summary>[实战] 抽取音频数据</summary>
 
 ```c
 #include <stdio.h>
@@ -428,6 +448,8 @@ int main(int argc, char *argv[])
 $ lang -g -o extra_audio extra_audio.c `pkg-config --libs libavutil libavformat`
 $ ./extra_audio test.mp4 killer.aa
 ```
+
+</details>
 
 ### 3.7 [实战] 抽取视频数据
 
