--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -956,7 +956,7 @@ TODO
 - 音视循环解码时对 quit 进行判断
 - 在收到信号变量消息时对 quit 进行判断
 
-## 6.5 音视频同步
+### 6.5 音视频同步
 
 时间戳：
 
@@ -2177,4 +2177,40 @@ synchronize(AVFrame *frame, double play) {
 ```
 
 </details>
+
+## FFmpeg 痛点解决
+
+**回音消除解决方案：**
+
+> [语音自适应回声消除（AEC）算法](<https://blog.csdn.net/shichaog/article/details/71152743>)
+>
+> [回声消除(AEC)原理](<https://blog.csdn.net/longbei9029/article/details/81237402>)
+>
+> [音频降噪在 58 直播中的研究与实现](<https://www.infoq.cn/article/QOp4IOao_DJJ6eNsIOXp>)
+
+**视频秒开：**
+
+> [直播视频秒开及视频优化](<https://blog.csdn.net/ShareUs/article/details/79115816>)
+>
+> [视频直播秒开背后的技术与优化经验](<https://juejin.im/post/58eaf49a8d6d8100618bc238>)
+>
+> [短视频“秒播”那点事](https://segmentfault.com/a/1190000014405913)
+>
+> [百度LSS 音视频直播 秒开](<http://www.voidcn.com/article/p-qkdvttue-bmd.html>)
+>
+> [播放器的“妥协”造就了视频“秒开”的实现！](<https://zhuanlan.zhihu.com/p/34159910>)
+
+**多人视频实时互动：**
+
+> [WebRTC现状以及多人视频通话分析](<https://juejin.im/post/5cb008c26fb9a068547345eb>)
+>
+> [多人视频连麦——直播高效互动方式](<http://www.polyv.net/news/2019/02/hy0396/>)
+
+**实时互动与大并发负载：**
+
+> [RTP直播分发服务器集群方案](http://www.mediapro.cc/rtp转发服务器/)
+>
+> [海量用户实时互动直播架构探索](<https://zhuanlan.zhihu.com/p/23055659>)
+>
+> [直播开发过程中关于直播技术的架构问题](<http://blog.itpub.net/69907981/viewspace-2564479/>)
 
