--- a/source/_posts/FFmpeg/移动端音视频入门.md
+++ b/source/_posts/FFmpeg/移动端音视频入门.md
@@ -8,6 +8,8 @@ abbrlink: 30767
 date: 2019-04-23 10:14:50
 ---
 
+> [H264基本原理](<https://www.jianshu.com/p/97b4dc8c7f00>)
+
 ## 1. 万人直播架构讲解
 
 直播产品的种类：
