--- a/source/_posts/Program-C/数据结构.md
+++ b/source/_posts/Program-C/数据结构.md
@@ -1,8 +1,8 @@
 ---
-title: Program-C 数据结构
-tags: Program-C
+title: 数据结构
+tags: [DataStructure, c/c++]
 reward: true
-categories: Program-C
+categories: [DataStructure, c/c++]
 toc: true
 abbrlink: 39639
 date: 2016-06-03 10:14:50
