--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -971,6 +971,8 @@ TODO
 - 解码时间戳：1 4 2 3
 - 展示时间戳：1 2 3 4
 
+由于有了 B 帧之后，它打乱了 PTS 时间戳，所以加了 DTS 解码时间戳。在大多数没有 B 帧的情况下 PTS 和 DTS 是一致的。
+
 从哪儿获得 PTS：
 
 - AVPacket 中的 PTS
@@ -993,6 +995,8 @@ TODO
 - video_clock：预测的下一帧视频的 PTS
 - frame_delay：1/tbr
 - audio_clock：音频当前播放的时间戳
+
+音视频同步的时候需要计算 audio_clock 和 video_clock，看视屏时间是在音频时间之前还是在音频时间之后，如果是在音频时间之前就立即播放，如果在音频时间之后需要 delay 一段时间播放（delay的时间计算：audio_clock  - video_clock）
 
 音视频同步方式：
 
