--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -9,6 +9,8 @@ abbrlink: 20607
 date: 2019-04-30 14:14:50
 ---
 
+> [雷神 FFmpeg blog](<https://blog.csdn.net/leixiaohua1020/column/info/ffmpeg-devel/7>)
+
 <!-- more -->
 
 <img src="/images/imageFFmpeg/FFmpeg音视频架构-01.png">
