--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -11,6 +11,8 @@ date: 2019-04-30 14:14:50
 
 > [雷神 FFmpeg源代码结构图 - 解码](<https://blog.csdn.net/leixiaohua1020/article/details/44220151>)
 >
+> [雷神 GitHub](<https://github.com/HatsuneMikuV/FFmpeg_Leixiaohua>)
+>
 > [雷神 FFmpeg blog](<https://blog.csdn.net/leixiaohua1020/column/info/ffmpeg-devel/7>)
 
 <!-- more -->
