--- a/source/_posts/Program-C/数据结构.md
+++ b/source/_posts/Program-C/数据结构.md
@@ -1,8 +1,8 @@
 ---
 title: 数据结构
-tags: [DataStructure, c/c++]
+tags: DataStructure
 reward: true
-categories: [DataStructure, c/c++]
+categories: DataStructure
 toc: true
 abbrlink: 39639
 date: 2016-06-03 10:14:50
