--- a/source/_drafts/音视频中常见的问题.md
+++ b/source/_drafts/音视频中常见的问题.md
@@ -1,3 +1,6 @@
+---
+abbrlink: 1
+---
 > [详解音视频直播中的低延时](<https://www.infoq.cn/article/video-low-delay>)
 >
 > [全局250毫秒延迟的实时1V1答疑 RUDP传输的优化实践](<https://cloud.tencent.com/info/4526ad99cbc978b2e7fa5be920b3df3d.html>)
