--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -14,6 +14,8 @@ date: 2019-04-30 14:14:50
 > [雷神 GitHub](<https://github.com/HatsuneMikuV/FFmpeg_Leixiaohua>)
 >
 > [雷神 FFmpeg blog](<https://blog.csdn.net/leixiaohua1020/column/info/ffmpeg-devel/7>)
+>
+> [ffmpeg filter过滤器 基础实例及全面解析](<https://blog.csdn.net/newchenxf/article/details/51364105>)
 
 <!-- more -->
 
