--- a/themes/next/languages/en.yml
+++ b/themes/next/languages/en.yml
@@ -14,6 +14,8 @@ menu:
   schedule: Schedule
   sitemap: Sitemap
   commonweal: Commonweal 404
+  messages: Message Board
+  top: Read Top
 
 sidebar:
   overview: Overview
