--- a/themes/next/languages/zh-HK.yml
+++ b/themes/next/languages/zh-HK.yml
@@ -14,6 +14,8 @@ menu:
   schedule: 日程表
   sitemap: 站點地圖
   commonweal: 公益 404
+  messages: 留言板
+  top: 阅读Top
 sidebar:
   overview: 本站概覽
   toc: 文章目錄
