--- a/themes/next/languages/zh-TW.yml
+++ b/themes/next/languages/zh-TW.yml
@@ -14,6 +14,8 @@ menu:
   schedule: 時間表
   sitemap: 網站地圖
   commonweal: 公益 404
+  messages: 留言板
+  top: 阅读Top
 sidebar:
   overview: 本站概要
   toc: 文章目錄
