--- a/source/_posts/人生算法-02.md
+++ b/source/_posts/人生算法-02.md
@@ -968,7 +968,7 @@ WHAT：我们只是在这个过程中做出了最棒的电脑。
 
 在一个个时间切片里的我们，就像一只只蚂蚁和蜜蜂。此时此刻的你，和下一秒的你，就是两只蚂蚁。作决策的你是一只蚂蚁，行动的你是另一只蚂蚁。无数个不同时刻的你，叠加在一起，就像蚂蚁社会一样，构建了一个智能系统。所以，你自己就是一个超级智能系统。
 
-蚂蚁之间的传输控制协议，是这个智能系统的算法。 不同时刻的你之间的关系、反馈、奖赏和连续性，就是你的算法。
+蚂蚁之间的传输控制协议，是这个智能系统的算法。 <font color="#FF8000">**不同时刻的你之间的关系、反馈、奖赏和连续性，就是你的算法**。</font>
 
 通过这样的比喻，我们就能理解，人和人之间看起来差别不大，为什么差距会那么大。
 
@@ -992,7 +992,7 @@ WHAT：我们只是在这个过程中做出了最棒的电脑。
 
 这个方法的关键，就是你要去分辨，用时间和钱换来的这些东西，哪些是资产（asset），哪些是费用（cost）。随着时间流逝，会加深你的护城河，给你带来新价值的往往是“资产”；而那些只是当前的消耗，或者时间越久对自己越不利的可以看成是费用。
 
-选择多投入“资产”，少投入“费用”。随着资产的不断增厚，你这个系统的价值就会越来越大。
+<font color="#FF8000">**选择多投入“资产”，少投入“费用”。随着资产的不断增厚，你这个系统的价值就会越来越大**。</font>
 
 ### 本讲小结
 
