--- a/source/_posts/人生算法-02.md
+++ b/source/_posts/人生算法-02.md
@@ -5,6 +5,9 @@ tags:
 categories:
   - other
 reward: true
+password: mp123456
+abstract: Welcome to my blog, enter password to read.
+message: Welcome to my blog, enter password to read.
 abbrlink: 60321
 date: 2019-08-18 14:33:42
 ---
