--- a/source/_posts/FFmpeg/音视频核心技术.md
+++ b/source/_posts/FFmpeg/音视频核心技术.md
@@ -7,6 +7,9 @@ categories: FFmpeg
 toc: true
 abbrlink: 20607
 date: 2019-04-30 14:14:50
+password: Miaow
+abstract: Welcome to my blog, enter password to read.
+message: Welcome to my blog, enter password to read.
 ---
 
 > [雷神 FFmpeg源代码结构图 - 解码](<https://blog.csdn.net/leixiaohua1020/article/details/44220151>)
