--- a/source/_posts/FFmpeg/移动端音视频入门.md
+++ b/source/_posts/FFmpeg/移动端音视频入门.md
@@ -6,6 +6,9 @@ categories: FFmpeg
 toc: true
 abbrlink: 30767
 date: 2019-04-23 10:14:50
+password: Miaow
+abstract: Welcome to my blog, enter password to read.
+message: Welcome to my blog, enter password to read.
 ---
 
 > [H264基本原理](<https://www.jianshu.com/p/97b4dc8c7f00>)
